VEUE-503 - fix on the phone lenghth fields on iphone 5 and galaxy f.

--- a/app/javascript/style/components/_modal.scss
+++ b/app/javascript/style/components/_modal.scss
@@ -102,6 +102,14 @@
           @include smallThin {
             min-width: 238px;
           }
+          @include galaxyFold {
+            width: 170px;
+            min-width: 0px;
+          }
+          @include iPhone5 {
+            width: 208px;
+            min-width: 0px;
+          }
         }
 
         .iti__selected-flag {
